--- a/c++/Makefile
+++ b/c++/Makefile
@@ -1,13 +1,27 @@
 TARGET = bnp.out
-CC = clang++-11
-CXXFLAGS = -Wall -Wextra -std=c++20 -stdlib=libc++ -I/usr/include/python3.8 -I$HOME/.local/lib/python3.8/site-packages/numpy/core/include -lpython3.8
+CXX = clang++-11
+OBJS = bs_needle_problems.o
+CXXFLAGS = -Wall -Wextra -std=c++20 -I/usr/include/python3.8 -I$(HOME)/.local/lib/python3.8/site-packages/numpy/core/include -lpython3.8
+LDFLAGS = 
 
 #clang++-11 bs_needle_problem.cpp -I/usr/include/python3.8 -I$HOME/.local/lib/python3.8/site-packages/numpy/core/include -lpython3.8
 
-DEBUG = -g -c -fsanitize=address -fsanitize=leak
+DEBUG = -g -fsanitize=address -fsanitize=leak -O0
 
-all:
-	$(CC) $(CXXFLAGS) ./bs_needle_problem.cpp -o $(TARGET)
+.PHONY: all
+all: a.out Makefile
 
-debug:
-	$(CC) $(CXXFLAGS) $(DEBUG) ./bs_needle_problem.cpp
+.PHONY: clean
+clean:
+	rm -rf *.o
+
+.PHONY: debug
+debug: Makefile
+	$(CXX) $(CXXFLAGS) -O0 -g bs_needle_problem.cpp
+
+
+a.out: bs_needle_problem.cpp Makefile
+	$(CXX) $(CXXFLAGS) -O2 bs_needle_problem.cpp
+
+%.o: %.cpp Makefile
+	$(CXX) $(CXXFLAGS) -c bs_needle_problem.cpp
